--- a/.env.example
+++ b/.env.example
@@ -55,6 +55,34 @@ SOLANA_NETWORK="mainnet-beta"  # Options: mainnet-beta | mainnet | devnet | test
 JUPITER_API_URL="https://lite-api.jup.ag"
 
 # ----------------------------------------------------------------------------
+# Jito MEV Protection (WEEK 3 - DAY 16)
+# ----------------------------------------------------------------------------
+# Enable MEV-protected transactions via Jito Block Engine
+#
+# Benefits:
+# - Bypasses public mempool (no frontrunning)
+# - Often faster execution
+# - Priority by validators (95% of Solana stake)
+# - Saves users 5-15% per trade from MEV attacks
+#
+# Cost: ~$0.001-0.01 tip per transaction
+JITO_ENABLED=false  # Set to 'true' to enable MEV protection
+
+# Jito Block Engine RPC URL
+# Mainnet: https://mainnet.block-engine.jito.wtf
+# Devnet: https://dallas.dev.jito.wtf
+JITO_BLOCK_ENGINE_URL="https://mainnet.block-engine.jito.wtf"
+
+# Tip amount in lamports (default: 10000 = 0.00001 SOL ≈ $0.001)
+# Higher tips = higher priority
+# Recommended: 10000-100000 (0.00001-0.0001 SOL)
+JITO_TIP_LAMPORTS=10000
+
+# Compute unit price in microLamports (default: 5000)
+# Used for priority fees
+JITO_COMPUTE_UNIT_PRICE=5000
+
+# ----------------------------------------------------------------------------
 # Platform Revenue
 # ----------------------------------------------------------------------------
 # Platform fee in basis points (1 bps = 0.01%)
