--- a/package.json
+++ b/package.json
@@ -32,21 +32,26 @@
   "license": "MIT",
   "dependencies": {
     "@fastify/cors": "^9.0.1",
+    "@jup-ag/api": "^6.0.46",
+    "@metaplex-foundation/mpl-token-metadata": "^3.4.0",
     "@prisma/client": "^6.18.0",
+    "@solana/spl-token": "^0.4.14",
     "@solana/web3.js": "^1.95.3",
     "argon2": "^0.44.0",
     "axios": "^1.13.2",
+    "bs58": "^6.0.0",
     "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
     "grammy": "^1.30.0",
-    "ioredis": "^5.4.1"
+    "ioredis": "^5.4.1",
+    "pino": "^10.1.0",
+    "pino-pretty": "^13.1.2"
   },
   "devDependencies": {
     "@types/node": "^22.5.5",
     "@vitest/coverage-v8": "^4.0.7",
     "@vitest/ui": "^4.0.7",
     "bun-types": "^1.1.30",
-    "pino-pretty": "^13.1.2",
     "prisma": "^6.18.0",
     "vitest": "^4.0.7"
   }
