--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "grammy": "^1.30.0",
     "ioredis": "^5.4.1",
     "pino": "^10.1.0",
-    "pino-pretty": "^13.1.2"
+    "pino-pretty": "^13.1.2",
+    "prom-client": "^15.1.3"
   },
   "devDependencies": {
     "@types/node": "^22.5.5",
