--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "bun --watch src/index.ts",
-    "build": "bun build src/index.ts --outdir dist --target node",
+    "typecheck": "tsc --noEmit",
+    "build": "bun run typecheck && bun build src/index.ts --outdir dist --target node",
     "start": "bun run dist/index.js",
     "test": "vitest run",
     "test:watch": "vitest",
@@ -14,6 +15,7 @@
     "test:coverage": "vitest run --coverage",
     "test:unit": "vitest run tests/unit",
     "test:integration": "vitest run tests/integration",
+    "test:e2e": "cross-env TEST_ENV_FILE=.env.e2e vitest run tests/e2e",
     "prisma:generate": "bunx prisma generate",
     "prisma:migrate": "bunx prisma migrate dev",
     "prisma:studio": "bunx prisma studio",
@@ -53,6 +55,7 @@
     "@vitest/coverage-v8": "^4.0.7",
     "@vitest/ui": "^4.0.7",
     "bun-types": "^1.1.30",
+    "cross-env": "^7.0.3",
     "prisma": "^6.18.0",
     "vitest": "^4.0.7"
   }
