--- a/.env.example
+++ b/.env.example
@@ -1,155 +1,45 @@
-# Environment variables declared in this file are NOT automatically loaded by Prisma.
-# Please add `import "dotenv/config";` to your `prisma.config.ts` file, or use the Prisma CLI with Bun
-# to load environment variables from .env files: https://pris.ly/prisma-config-env-vars.
+# Environment variables template
+# Copy this to .env and fill with your actual values
 
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-# ============================================================================
-# SETUP INSTRUCTIONS
-# ============================================================================
-# 1. Copy this file to .env: cp .env.example .env
-# 2. Replace all placeholder values with your actual credentials
-# 3. NEVER commit .env to git (already in .gitignore)
-# 4. Keep .env secure - it contains production secrets
-# ============================================================================
-
-# Telegram Bot Configuration
-# Get your bot token from @BotFather on Telegram
-# Format: 1234567890:ABCdefGHIjklMNOpqrsTUVwxyz
+# Telegram
 BOT_TOKEN=your_telegram_bot_token_here
 
-# Database Configuration
-# PostgreSQL credentials (used by docker-compose.yml)
+# Database
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=your_secure_password_here
+POSTGRES_PASSWORD=generate_secure_password_here
 POSTGRES_DB=sniper_bot
+DATABASE_URL="postgresql://postgres:YOUR_PASSWORD@localhost:5433/sniper_bot?schema=public"
 
-# Application database connection string
-# Format: postgresql://username:password@host:port/database?schema=public
-DATABASE_URL="postgresql://postgres:your_secure_password_here@localhost:5433/sniper_bot?schema=public"
-
-# Redis Configuration
-# Redis connection string for session storage
+# Redis
 REDIS_URL="redis://localhost:6380"
 
-# Solana Network Configuration
-# RPC URL for Solana blockchain connection
-# Mainnet: https://api.mainnet-beta.solana.com
-# Devnet: https://api.devnet.solana.com
+# Solana RPC (Public fallback)
 SOLANA_RPC_URL="https://api.mainnet-beta.solana.com"
-
-# Network: mainnet, devnet, testnet
 SOLANA_NETWORK="mainnet"
 
-# ============================================================================
-# PREMIUM RPC ENDPOINTS (Optional - Recommended for Production)
-# ============================================================================
-# The bot uses an advanced RPC Pool with automatic failover, circuit breaker,
-# rate limiting, and latency monitoring. Configure multiple endpoints for
-# best reliability and performance.
-#
-# Priority levels:
-# 1. Helius - Premium, highest priority (10 RPS free tier)
-# 2. QuickNode - Premium, high priority (10 RPS free tier)
-# 3. Public - Lowest priority fallback (2 RPS, rate limited)
-#
-# FREE TIER LIMITS:
-# - Helius Free: 10 req/sec, 100k req/day
-# - QuickNode Free: 10 req/sec, 500k req/month
-#
-# SETUP:
-# 1. Sign up at https://helius.dev and get API key (recommended)
-# 2. Sign up at https://quicknode.com and get endpoint URL (recommended)
-# 3. Leave blank to use only SOLANA_RPC_URL (not recommended for production)
-# ============================================================================
+# Premium RPC Endpoints (Get your own API keys!)
+# Helius: https://helius.dev (recommended for production)
+HELIUS_RPC_URL="https://mainnet.helius-rpc.com/?api-key=YOUR_HELIUS_KEY"
+# QuickNode: https://quicknode.com
+QUICKNODE_RPC_URL="https://your-endpoint.solana-mainnet.quiknode.pro/YOUR_KEY/"
 
-# Helius RPC endpoint (Priority 1)
-# Get API key from: https://helius.dev
-# Format: https://mainnet.helius-rpc.com/?api-key=YOUR_API_KEY
-HELIUS_RPC_URL=""
-
-# QuickNode RPC endpoint (Priority 2)
-# Get endpoint from: https://quicknode.com
-# Format: https://YOUR_ENDPOINT.solana-mainnet.quiknode.pro/YOUR_TOKEN/
-QUICKNODE_RPC_URL=""
-
-# Jupiter API Configuration
-# Jupiter v6 API URL for swap quotes and routing
-# Default: https://lite-api.jup.ag (recommended for most use cases)
-# Alternative: https://quote-api.jup.ag (full featured, higher latency)
-JUPITER_API_URL="https://lite-api.jup.ag"
-
-# Application Configuration
+# App
 NODE_ENV="development"
 PORT=3000
 
-# CORS Configuration
-# Comma-separated list of allowed origins for CORS
-# Format: http://localhost:3000,https://example.com,https://app.example.com
-# - Development: include localhost with various ports
-# - Production: include only your production domains
-# - Empty or "*" = INSECURE (allows all origins)
-# Examples:
-#   Development: http://localhost:3000,http://localhost:3001,http://127.0.0.1:3000
-#   Production: https://yourapp.com,https://www.yourapp.com
-ALLOWED_ORIGINS="http://localhost:3000,http://localhost:3001,http://127.0.0.1:3000"
-
-# Trading Commission Configuration
-# Platform fee in basis points (50 = 0.5%)
+# Trading Commission (your platform fees)
 PLATFORM_FEE_BPS=50
+PLATFORM_FEE_ACCOUNT=your_solana_wallet_address
 
-# Solana wallet address to receive platform fees
-# Must be a valid Solana public key (base58 encoded)
-PLATFORM_FEE_ACCOUNT="your_solana_wallet_address_here"
+# Jito MEV Protection
+JITO_ENABLED=true
+JITO_BLOCK_ENGINE_URL="https://mainnet.block-engine.jito.wtf,https://amsterdam.mainnet.block-engine.jito.wtf,https://frankfurt.mainnet.block-engine.jito.wtf,https://ny.mainnet.block-engine.jito.wtf,https://tokyo.mainnet.block-engine.jito.wtf"
+JITO_TIP_LAMPORTS=100000
 
-# ============================================================================
-# CRITICAL SECURITY CONFIGURATION
-# ============================================================================
-# Session master secret for HKDF key derivation (Variant C+)
-#
-# GENERATE THIS WITH:
-#   node -e "console.log(require('crypto').randomBytes(64).toString('base64'))"
-#   OR
-#   bun run src/config/env.ts
-#
-# REQUIREMENTS:
-# - Must be 64+ bytes (512+ bits) of cryptographically random data
-# - Base64 encoded
-# - NEVER share this secret
-# - Generate a NEW secret for each environment (dev, staging, prod)
-# - Store securely (env vars, secret manager, NOT in code)
-#
-# This secret is used to derive encryption keys for wallet private keys.
-# If compromised, ALL user wallets can be decrypted.
-# ============================================================================
-SESSION_MASTER_SECRET="your_64_byte_base64_encoded_secret_here"
+# Security (CRITICAL!)
+# Generate with: openssl rand -base64 64
+SESSION_MASTER_SECRET=generate_random_64_byte_base64_secret
+PASSWORD_REUSE_TTL_SECONDS=900
 
-# ============================================================================
-# PASSWORD REUSE POLICY
-# ============================================================================
-# Controls how long passwords remain in Redis for multi-trade convenience.
-#
-# TWO MODES:
-# 1. STRICT MODE (default): Password consumed after first trade (secure)
-#    - TTL: 120 seconds (2 minutes)
-#    - User must unlock wallet before EVERY trade
-#    - Most secure option
-#
-# 2. REUSE MODE (opt-in): Password persists for multiple trades (convenience)
-#    - TTL: Configurable via PASSWORD_REUSE_TTL_SECONDS
-#    - User unlocks once, trades freely within TTL window
-#    - Less secure - password stays in Redis
-#
-# HOW TO ENABLE:
-# - User goes to /settings → ♻️ Enable 15m reuse
-# - Next /unlock will store password with REUSE TTL
-# - User can snipe/buy/sell repeatedly without re-unlocking
-#
-# SECURITY WARNING:
-# - Reuse mode keeps plaintext passwords in Redis longer
-# - If Redis is compromised, attacker can execute trades
-# - Only enable for users who understand the tradeoff
-# - Production: consider shorter TTL (300s = 5 minutes)
-# ============================================================================
-PASSWORD_REUSE_TTL_SECONDS=900  # 15 minutes (default)
+# Honeypot Detection
+HONEYPOT_TIMEOUT_MS=5000
