--- a/.env.example
+++ b/.env.example
@@ -43,3 +43,25 @@ PASSWORD_REUSE_TTL_SECONDS=900
 
 # Honeypot Detection
 HONEYPOT_TIMEOUT_MS=5000
+
+# ============================================================
+# Auto-Sniper Discovery Sources
+# ============================================================
+
+# PumpFun (WebSocket stream)
+SNIPE_SOURCE_PUMPFUN_ENABLED=true
+
+# Raydium (Program logs)
+SNIPE_SOURCE_RAYDIUM_ENABLED=true
+
+# Orca (Program logs)
+SNIPE_SOURCE_ORCA_ENABLED=true
+
+# Meteora (Program logs) - High volume source
+SNIPE_SOURCE_METEORA_ENABLED=true
+# Optional: Custom program IDs (comma-separated)
+# SNIPE_METEORA_PROGRAM_IDS=LBUZKhRxPF3XUpBCjp4YzTKgLccjZhTSDM9YuVaPwxo,Eo7WjKq67rjJQSZxS6z3YkapzY3eMj6Xy8X5EQVn5UaB
+# Performance tuning (defaults optimized for high volume)
+# SNIPE_METEORA_CONCURRENCY=2        # Max concurrent transaction fetches
+# SNIPE_METEORA_DELAY_MS=200         # Delay between fetches (ms)
+# SNIPE_METEORA_QUEUE_SIZE=5000      # Max queue size before dropping events
