--- a/.env.example
+++ b/.env.example
@@ -130,6 +130,26 @@ GEYSER_COMMITMENT="confirmed"
 # Example: 250000000 (replays last ~20 minutes)
 GEYSER_FROM_SLOT=""
 
+# ============================================================================
+# POOL SOURCE MODE (Choose monitoring method)
+# ============================================================================
+# Controls which pool detection method to use:
+# - "geyser" = Geyser gRPC streaming (<50ms latency, requires subscription)
+# - "rpc" = WebSocket RPC sources (200-500ms latency, works with any RPC)
+#
+# RECOMMENDATIONS:
+# - Production: Use "geyser" for maximum performance
+# - Testing/Development: Use "rpc" to avoid Geyser costs
+# - Fallback: If Geyser unavailable, "rpc" provides reliable detection
+#
+# When POOL_SOURCE=rpc:
+# - Monitors 5 DEX sources: Raydium V4, Raydium CLMM, Orca, Meteora, Pump.fun
+# - Each source runs independent WebSocket subscription
+# - Automatic duplicate detection across sources
+# - Priority scoring based on DEX reputation
+# ============================================================================
+POOL_SOURCE="geyser"
+
 # Application Configuration
 NODE_ENV="development"
 PORT=3000
