--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "@jup-ag/api": "^6.0.46",
     "@metaplex-foundation/mpl-token-metadata": "^3.4.0",
     "@prisma/client": "^6.18.0",
+    "@raydium-io/raydium-sdk-v2": "^0.2.30-alpha",
     "@solana/spl-token": "^0.4.14",
     "@solana/web3.js": "^1.95.3",
+    "@triton-one/yellowstone-grpc": "^4.0.2",
     "argon2": "^0.44.0",
     "axios": "^1.13.2",
     "bs58": "^6.0.0",
@@ -48,7 +50,8 @@
     "ioredis": "^5.4.1",
     "pino": "^10.1.0",
     "pino-pretty": "^13.1.2",
-    "prom-client": "^15.1.3"
+    "prom-client": "^15.1.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^22.5.5",
@@ -56,6 +59,7 @@
     "@vitest/ui": "^4.0.7",
     "bun-types": "^1.1.30",
     "cross-env": "^7.0.3",
+    "ioredis-mock": "^8.9.0",
     "prisma": "^6.18.0",
     "vitest": "^4.0.7"
   }
